[tool.poetry]
name = "tweet-proxy-api"
version = "0.1.0"
description = ""
authors = ["v3vapp <v3v.app@gmail.com>"]
readme = "README.md"
packages = [{include = "tweet_proxy_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.4.0"
python-dotenv = "^0.21.1"
tweepy = "^4.12.1"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
